# PrismLoader

./: AGENTS.md  CMakeLists.txt
build-proton/: prismproxy.def
docs/: README.md  architecture.md  building.md  debugging.md  installation.md  modding.md
loader/: CMakeLists.txt
loader/include/: Log.hpp
loader/include/Prism/: HookEngine.hpp  Loader.hpp  ModLoader.hpp  ModMenu.hpp  PatternScan.hpp
loader/src/: dllmain.cpp  entry.cpp  gdinit.cpp  hookengine.cpp  loader.cpp  log.cpp  modloader.cpp  patternscan.cpp
loader/src/ui/: modmenu.cpp
mods/example/: CMakeLists.txt  mod.json
mods/example/src/: main.cpp
prism/: CMakeLists.txt
prism/src/: main.cpp
scripts/: gendef.sh  install-proton.sh  setup.sh
sdk/include/Prism/: Event.hpp  Hook.hpp  Log.hpp  Mod.hpp  Version.hpp
